<?xml version="1.0"?>
<package>
  <name>safety_msgs</name>
  <version>0.1.0</version>
  <description>The safety_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="susiyun@baidu.com">susiyun</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>  
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

